--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <section class="synopsis">
         <div class="synopsis-grid">
             <div class="synopsis-text scroll-reveal">
-                <h2>The Table feeds the city. <br>It owns it.</h2>
+                <h2>The Table feeds the city.<br>It owns it.</h2>
                 <p>
-                    Lumenridge is a late-90s city built on shifts, silence, and a fragile truce between the factions that feed it. 
-                    When a pastor known for keeping the peace is found dead, the city calls it an accident. 
+                    Lumenridge is a late-90s city built on shifts, silence, and a fragile truce between the factions that feed it.
+                    When a pastor known for keeping the peace is found dead, the city calls it an accident.
                     <strong class="text-gold">Julian Pike</strong> knows better.
                 </p>
                 <br>
                 <p>
-                    A former delivery driver turned blacklisted reporter, Pike uncovers fragments of a buried archive known as the 
-                    <em class="text-maroon">Burning Crown</em>, proof that the city’s worst disaster was staged decades ago. 
+                    A former delivery driver turned blacklisted reporter, Pike uncovers fragments of a buried archive known as the
+                    <em class="text-maroon">Burning Crown</em>, proof that the city's worst disaster was staged decades ago.
                 </p>
                 <br>
                 <p>
@@ -41,6 +41,7 @@
                     In Lumenridge, truth is currency, and silence keeps the city alive.
                 </p>
             </div>
+
             <!-- Placeholder for Character Art -->
             <div class="synopsis-visual scroll-reveal delay-1">
                 <div class="gallery-item" style="height: 100%; min-height: 400px; border: 1px solid var(--color-gold);">
@@ -69,7 +70,7 @@
         <div class="newsletter-content scroll-reveal">
             <h2>Get the Prologue</h2>
             <p>Fast food was never the business.</p>
-            <form class="input-group" onsubmit="event.preventDefault(); alert('This is a demo form. In a real site, this would connect to your email service (e.g. Mailchimp).');">
+            <form class="input-group" onsubmit="event.preventDefault(); alert('This is a demo form. In a real site, this would connect to your email service (e.g., Mailchimp).');">
                 <input type="email" placeholder="Enter your email" required>
                 <button type="submit" class="btn">Get Notified</button>
             </form>
